force-app/main/default/objects/Pandora_Equipo_Sla_Change__e/Pandora_Equipo_Sla_Change__e.object-meta.xml
<CustomObject>
    <description>Notifica a LWCs de equipo/SLA que un Case cambió (multi-usuario en tiempo casi real).</description>
    <label>Pandora Equipo SLA Change</label>
    <pluralLabel>Pandora Equipo SLA Changes</pluralLabel>
</CustomObject>