force-app/main/default/objects/Pandora_Equipo_Sla_Change__e/fields/Actor_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Actor_User_Id__c</fullName>
    <description>Usuario que originó el cambio, si aplica.</description>
    <label>Actor User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>