force-app/main/default/objects/Pandora_Equipo_Sla_Change__e/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <description>Id del Case afectado (18 caracteres).</description>
    <label>Case Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>