force-app/main/default/objects/Pandora_Equipo_Sla_Change__e/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <description>TEAM, CUSTODY, CASE_STATUS, CASE_PAUSE, CASE_CLOSED, SLA.</description>
    <label>Change Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>