force-app/main/default/objects/Pandora_Equipo_Sla_Change__e/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>Identificador para deduplicar en el cliente.</description>
    <label>Correlation Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>