force-app/main/default/objects/Pandora_Equipo_Sla_Change__e/fields/Notify_User_Ids__c.field-meta.xml
<CustomField>
    <fullName>Notify_User_Ids__c</fullName>
    <description>Ids de usuario separados por punto y coma que deben refrescar el monitor.</description>
    <label>Notify User Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>